minitrace-macro/tests/ui/err/has-empty-name.stderr
error: `name` can not be empty
 --> tests/ui/err/has-empty-name.rs:3:1
  |
3 | #[trace(name = "")]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
