minitrace-macro/tests/ui/err/has-empty-name.rs
use minitrace::trace;

#[trace(name = "")]
fn f() {}

fn main() {}
